tests-integration/tests/roundtrip/invalid/semantic/typecheck/comparison_expr_in_arith_list/input.essence
find x : int(0..10)
such that sum([x, 2 >= 3, 5 - 10]) > 0